Fixing Contrast error in Nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ ul {
  } 
 
  .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-    color: goldenrod;
+    color: #F6E4B7;
 }
 
 .nav-logo {
